envoy-proxy-config.yaml
static_resources:

  listeners:
  - name: subme_proxy
    address:
      socket_address:
        address: "::"
        port_value: 3000
        ipv4_compat: true
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          stat_prefix: ingress_http
          access_log:
          - name: envoy.access_loggers.stdout
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.access_loggers.stream.v3.StdoutAccessLog
          http_filters:
          - name: envoy.filters.http.router
          upgrade_configs:
          - upgrade_type: websocket
          use_remote_address: true
          route_config:
            name: local_route
            virtual_hosts:
            - name: subme
              domains: ["*"]
              routes:
              - match:
                  prefix: "/backend/"
                route:
                  prefix_rewrite: "/"
                  cluster: service_backend
              - match:
                  prefix: "/"
                route:
                  cluster: service_frontend
                  
  clusters:
  - name: service_backend
    connect_timeout: 10s
    type: LOGICAL_DNS
    # Comment out the following line to test on v6 networks
    dns_lookup_family: V4_ONLY
    load_assignment:
      cluster_name: service_backend
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: backend
                port_value: 4000

  - name: service_frontend
    connect_timeout: 10s
    type: LOGICAL_DNS
    # Comment out the following line to test on v6 networks
    dns_lookup_family: V4_ONLY
    load_assignment:
      cluster_name: service_frontend
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: frontend
                port_value: 3000
